[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] } # Done so dont have to do last part of: cargo run --features bevy/dynamic_linking
rand_core = "0.6"
bevy_rand = "0.5"
bevy_prng = { version = "0.5", features = ["rand_chacha", "wyrand"] }
rand = "0.8.4"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3